@@ -2,7 +2,6 @@ todo:
 - generate deltas rather than fulltexts when creating file id maps
 - BzrDir.create_branch() should set the revision id to NULL_REVISION
 - avoid extra connect in logwalker?
-- free memory! (#54253)
 - tests for setting svk:merge from .bzr checkout
 - tests for http-specific SvnRaTransport._request_path() code
 - tests for auth.py
